--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="pin-generator half-width">
-                    <input id="view-pin" class="form-control" type="text">
+                    <input id="view-pin" class="text-center h1" class="form-control" type="text" value="????">
                     <button id="generate-pin" class="generate-btn">Generate Pin</button>
                 </div>
             </div>
